Second_Step/data/46/8/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:25: error: cannot find symbol
        triRapide(tab);
        ^
  symbol:   method triRapide(int[])
  location: class Tools
1 error
Not compiled
